--- a/Blazor.Socket.IO/Blazor.Socket.IO.Sample/Pages/Index.razor
+++ b/Blazor.Socket.IO/Blazor.Socket.IO.Sample/Pages/Index.razor
@@ -1,11 +1,9 @@
 ﻿@page "/"
 @using System.Text.Json
 
-<h1>Hello, world!</h1>
-
-<SocketIo @ref="_socket" Url="http://localhost:1337/" EventHandlers="Handlers" />
+<BlazorSocket @ref="_socket" Url="http://localhost:1337/" EventHandlers="Handlers" />
 <form @onsubmit="EmitMessage">
-    <input @bind="_message" @oninput="v => _message = v.Value?.ToString()"/><button type="submit">Emit Message</button>
+    <input @bind="_message" @oninput="v => _message = v.Value?.ToString()" /><button type="submit">Emit Message</button>
 </form>
 
 @foreach (var message in Messages)
@@ -15,7 +13,7 @@
 
 @code
 {
-    private SocketIo? _socket;
+    private BlazorSocket? _socket;
     private static readonly List<string?> Messages = new();
 
     public Dictionary<string, Action<string>> Handlers => new()
